test/libpolynomial/syntaxTests/parsing/pragma_illegal.pol
pragma ``;
// ----
// ParserError: (7-8): Token incompatible with Polynomial parser as part of pragma directive.
// ParserError: (8-9): Token incompatible with Polynomial parser as part of pragma directive.
